# Algorithms-for-OpenStreetMap-data

./: .gitignore  CMakeLists.txt  Details.md  README.md
README/: README.md  geocoder_features_design.md  geocoder_heuristics.md
benchmark/: baden-wuerttemberg-260502_2026-07-18_033145.md  bayern-260717_2026-07-18_161304.md  brandenburg-260717_2026-07-18_160942.md  bremen-260717_2026-07-18_160619.md  hamburg-260717_2026-07-18_160621.md  hessen-260717_2026-07-18_161021.md  mecklenburg-vorpommern-260717_2026-07-18_160632.md  niedersachsen-260717_2026-07-18_161134.md  nordrhein-westfalen-260717_2026-07-18_161625.md  rheinland-pfalz-260717_2026-07-18_160805.md  saarland-260717_2026-07-18_160626.md  sachsen-260717_2026-07-18_160847.md  sachsen-anhalt-260717_2026-07-18_160742.md  schleswig-holstein-260717_2026-07-18_160702.md  thueringen-260717_2026-07-18_160720.md
src/: config.h  main.cpp
src/data_extraction_and_storage/: data_extraction.cpp  data_extraction_storage.cpp  data_extraction_storage.h
src/geo/: grid_index.cpp  grid_index.h  pip_pipeline.cpp  pip_pipeline.h  polygon_hierarchy.cpp  polygon_hierarchy.h  slab_polygon.cpp  slab_polygon.h
src/geocoder/: fuzzy.cpp  fuzzy.h  geocoder.cpp  geocoder.h  inverted_index.cpp  inverted_index.h  normalizer.cpp  normalizer.h  normalizer_test.cpp  ranker.cpp  ranker.h  synonyms.cpp  synonyms.h
src/io/: benchmark_log.cpp  benchmark_log.h  binary_io.cpp  binary_io.h
src/server/: api_handler.cpp  api_handler.h  http_server.cpp  http_server.h  httplib.h
src/web/: index.html  map.js  style.css
